pages modified and added new pages

--- a/app/Views/campaignEducationImg.html
+++ b/app/Views/campaignEducationImg.html
@@ -4,7 +4,7 @@
 		
 		<tr>
 			<td height="30" align="center">
-			<img src = "img/campaign-research.png" align = "center" alt = "campaign.jpg" width = "200px" height = "100" align = "right" >
+			<img src = "img/Fundraising12.jpg" align = "center" alt = "campaign.jpg" width = "200px" height = "100" align = "right" >
 			</td>
 		</tr>
 		<tr>
@@ -29,30 +29,30 @@
 				<!-- </B> -->
 				
 				<h1>
-					This page is to create new fund rising event for research
+					This page is to create new fund rising event for Education
 				</h1>
 
-				<form action="campaignResearchImg.html">
+				<form action="campaignEducationOthers.html" >
 					<fieldset width="400">
-					<table align="left">
-						<colgroup span="2">
-							<col width="150"></col>
-							<col width="150"></col>
-						</colgroup>
+					<table>
 						
 						<tr>
-							<td>
-								Title: <input type="text" size="60" name="title"/>
+							<td align="center">
+								<img src="img/campChairity.jpg" height="300"align="center" border="2" hspace="250px"/>
 							</td>
-						</tr>
-						<tr>			
-							<td>
-								<br/>Description: <br/><textarea type="text" cols="70" rows="15" name="title"></textarea>
+						</tr>						
+						<tr>
+							<td align="center">
+								<input type="file" name="educationImg" accept="image/*" value="bro"/>
 							</td>
 						</tr>
 						
 						<tr>
-							<td valign="bottom" align="right"><input type="submit" value="Next" size="50"/> </td>
+							<td align="center">
+								<input type="submit" value="Next" valign="right"/> 
+								Or 
+								<a href="#"> Skip</a>
+							</td>
 						</tr>
 					</table>
 					</fieldset>
