--- a/app/Views/registration.html
+++ b/app/Views/registration.html
@@ -24,9 +24,7 @@
 							<hr/>
 							<hr/>
 							<b>Password</b> &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp  &nbsp  :<input type="password" name="password"/><br/><hr/>
-							<b>Confirm Password</b> &nbsp &nbsp  &nbsp:<input type="password" name="confirmPassword"/><br/>
-							<hr/>
-							<hr/>						
+							<b>Confirm Password</b> &nbsp &nbsp  &nbsp :<input type="password" name="confirmPassword" /><br/><hr/>	
 											
 						<input type="submit" value="Submit" />
 						
