some contents added to homepage

--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -19,10 +19,16 @@
 		
 		<tr>
 				
-			<td>
+			<td valign="top">
 				
-				<form >
-		
+				<div align="center">							
+				<font size="7" color="red">Take Fundraising to new Heights</font><br/>
+				<font size="6" color="green">Raise money to support everyone</font><br/>
+				<font size="6" color="green">Big or small, your cause matters.</font><br/><br/>
+				<font size="5" color="blue">Join a Cause</font><br/>
+				<font size="5" color="blue">Set an Example</font><br/>
+				<font size="5" color="blue">Be a part of something Bigger</font><br/>
+				</div>
 			</td>
 												
 		</tr>
