links are fixed for campaigns

--- a/app/Views/blogPersonal.html
+++ b/app/Views/blogPersonal.html
@@ -17,7 +17,7 @@
 			<td height="20" colspan="3">
 				
 				<a href="index.html">Home</a>&nbsp &nbsp &nbsp  
-				<a href="campains.html">Campaigns</a> &nbsp &nbsp &nbsp
+				<a href="explore.html">Campaigns</a> &nbsp &nbsp &nbsp
 				<a href="blog.html">Blogs</a> &nbsp &nbsp &nbsp
 				<a href="createBlog.html">New Blog</a> &nbsp &nbsp &nbsp
 			</td>			
