contents are added of campaigns

--- a/app/Views/explore.html
+++ b/app/Views/explore.html
@@ -22,153 +22,133 @@
 					<tr>
 						<td width="300" height="300">
 							<a href="fullpostexplore.html">
-								<img src="img/crisishelp.jpg" align="center" width="300px" height="150"/>
+								<img src="img/education1.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: Shuvitro Roy</p>
 								<p>
 									<small><i>
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth
+										 On the corner of a busy intersection in Kolkata sits Kailash Vidyamandir.Kailash is an all-boys primary school and a co-ed secondary school that serves 700 students.
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p align="bottom"><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p align="bottom"><b>Raised:</b> $70 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $640 </p>
 						</td>
 						
 						<td width="300" >
-							<a href="fullpostexplore.html">
+							<a href="fullpostexplore2.html">
 								<img src="img/crisishelp1.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: Amy Watson </p>
 								<p>
 									<small><i>
-										one morning before taking my young children to school. 
-										Within 24 hours, the doctors suspected I had lung cancer
+										One day in September 2015, I felt a lump in my left breast. 
+										I am not an alarmist, but I am also very educated and aware of what that could mean. 
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p><b>Raised:</b> $116 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $800 </p>
 						</td>
 						
 						<td width="300">
-							<a href="fullpostexplore.html">
-								<img src="img/crisishelp2.jpg" align="center" width="300px" height="150"/>
+							<a href="fullpostexplore3.html">
+								<img src="img/charity3.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: Chaka </p>
 								<p>
 									<small><i>
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth
+										I have started a foundation called I Heart Africa, (iheartafrica.org) so we can help people in Africa who need it.
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p><b>Raised:</b> $1200 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $4000 </p>
 						</td>
 					</tr>
 					
 					<tr>
 						<td width="300" height="300">
-							<a href="fullpostexplore.html">
-								<img src="img/crisishelp.jpg" align="center" width="300px" height="150"/>
+							<a href="fullpostexplore4.html">
+								<img src="img/education4.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: Debby Brosius, Jeannine Ball, and Lori Franzen</p>
 								<p>
 									<small><i>
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth
+										Debby Brosius, Jeannine Ball, and Lori Franzen are veteran teachers at Los Alamitos High School with a combined 85 years of teaching experience; between us, that's over 15,000 students!
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p align="bottom"><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p align="bottom"><b>Raised:</b> $600 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1200</p>
 						</td>
 						
 						<td width="300" >
-							<a href="fullpostexplore.html">
-								<img src="img/crisishelp1.jpg" align="center" width="300px" height="150"/>
+							<a href="fullpostexplore5.html">
+								<img src="img/cancer5.jpg" align="center" width="300px" height="150"/>
 							</a>
 								<p> By: Maxim Max</p>
 								<p>
 									<small><i>
-										one morning before taking my young children to school. 
-										Within 24 hours, the doctors suspected I had lung cancer
+										My story begins with numbness. One day in 2012, three of the fingers in my left hand suddenly lost their feeling.
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p><b>Raised:</b> $243 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1200 </p>
 						</td>
 						
 						<td width="300">
-							<a href="fullpostexplore.html">
-								<img src="img/crisishelp2.jpg" align="center" width="300px" height="150"/>
+							<a href="fullpostexplore6.html">
+								<img src="img/charity6.png" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: Asley Stewart</p>
 								<p>
 									<small><i>
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth
+										 On January 13, 2017 an amazing friend and long time buddy of mine, Jonathan Strudwick, passed away in a car accident.
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p><b>Raised:</b> $350 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $2000 </p>
 						</td>
 					</tr>
 					
 					<tr>
 						<td width="300" height="300">
-							<a href="fullpostexplore.html">
-								<img src="img/crisishelp.jpg" align="center" width="300px" height="150"/>
+							<a href="fullpostexplore7.html">
+								<img src="img/education7.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: John Will</p>
 								<p>
 									<small><i>
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth
-									</i></small>
+										Paul E. Zurek, Jr., of Salem, New Hampshire and formerly of Reading, passed away unexpectedly on Sunday, October 2, 2016, 
+										after completing a half marathon with his wife in Hampton, NH, at age 36.
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p align="bottom"><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p align="bottom"><b>Raised:</b> $500 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $2000 </p>
 						</td>
 						
 						<td width="300" >
-							<a href="fullpostexplore.html">
-								<img src="img/crisishelp1.jpg" align="center" width="300px" height="150"/>
+							<a href="fullpostexplore8.html">
+								<img src="img/cancer8.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: Jackie Tanever</p>
 								<p>
 									<small><i>
-										one morning before taking my young children to school. 
-										Within 24 hours, the doctors suspected I had lung cancer
+								In August 2015, when I was 53 years old, I was still grieving the loss of my father, who had died of heart disease the prior November.
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p><b>Raised:</b> $125 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $820 </p>
 						</td>
 						
 						<td width="300">
-							<a href="fullpostexplore.html">
-								<img src="img/crisishelp2.jpg" align="center" width="300px" height="150"/>
+							<a href="fullpostexplore9.html">
+								<img src="img/charity9.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Maxim Max</p>
+								<p> By: Kylie</p>
 								<p>
 									<small><i>
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth 
-										Your donations WILL empower youth
+										Since I first contacted Kesha several months ago, we have been working together to try and find the best way to move forward with this campaign.
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
+								<p><b>Raised:</b> $543 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $2500 </p>
 						</td>
 					</tr>
 					
