--- a/app/Views/fullpostexplore.html
+++ b/app/Views/fullpostexplore.html
@@ -17,11 +17,26 @@
 		
 		<tr>
 			<td valign="top">
-				<h2>Donate for cancer patient</h2>
-				<p>By: Maxim Max </p>
+				<h2>Donate for Education institution</h2>
+				<p>By: Shuvitro Roy </p>
 				<p>
 					<small><i>
-						one morning before taking my young children to school. Within 24 hours, the doctors suspected I had lung cancer
+    On the corner of a busy intersection in Kolkata sits Kailash Vidyamandir.  Kailash is an all-boys primary school and a co-ed secondary school that serves 700 students.  It’s been on that same corner for 167 years offering an opportunity for the poorest students of Kolkata to receive an education. The school is led by Biswajit Mitra, a man with a golden heart and an unparalleled commitment to education. Despite all the challenges that come with his job, Principal Mitra is one of the most optimistic people I’ve ever met. He has something special to share about each student (“Akash is an amazing dancer,” “Babusona has lovely handwriting,” “Nandi is a strong football player”) as well as each alumnus who comes back to the school to pay their respects.  A few quick facts about Principal Mitra: He sometimes sleeps in his office to do morning exercises with the boys, he spends his weekends at education conferences, and is constantly trying to improve his school.  In his 16 years as headmaster, he righted a school that was sinking fast, hired exceptional teachers, created the first dorm at a public school in Kolkata, and built a tight-knit community.
+
+Supporting the principal is an incredible staff.  Many of them could be elsewhere.  As an example, the school’s head-warden, Sona Da, was a highly respected lawyer in Chetla (the neighborhood where Kailash is located).  He was retired, but at the Principal’s urging, he joined the school. He now puts in 12-hour days making sure the 100 students who live in the dorm are fed, dressed up to standard, and healthy.  Side note: he is also one of the flyest dressers of all time. The other staff at the school are excellent as well.  There’s our security guard, Subrata, who doubles as the carpenter and the “dorm mother,” Tanusree, who is mischievous and likes to play pranks.  No one is going through the motions at Kailash—they are working with a purpose.
+Then there are the teachers, most of whom have been at Kailash for years.  The school has teachers like Sharmila who spends her own money to take students on field trips and Dolly who gives out storybooks to the top preformers on her exams.  The teachers at Kailash deal with irregular student attendance, lack of teaching resources, and are faced with classrooms that have drastic discrepancy in student aptitude.  Teaching at Kailash is not easy, but the staff is ready to go six days a week.
+
+Finally, there are the students of Kailash.  They are curious, intelligent, aspirational, and loving.  They are a tight-knit group—older students look out for the younger ones, they share everything, and while there are arguments, they’re only short-lived.  They’re great kids on their way to becoming great adults.
+
+All of this positivity and good vibes is against a stark backdrop.
+
+Kailash’s students come from the most disadvantaged communities in Kolkata and the surrounding provinces.  They come almost exclusively from the 25% of families in West Bengal who live below the poverty line, subsisting on less than $1.90 a day. They are all first-generation learners, the first in their families to read and write.  15 students in the dorm are orphans, and many other students are missing a parent.  Some students face food insecurity, while others face housing insecurity, and some face both.  Some students have been physically abused others are pulled out of school to help harvest crops or to work to support their family, missing weeks of school at a time.  When some students walked into Kailash to start 5th grade it was their first time entering a school.  
+
+Kailash is a government school.  All its funding comes from the West Bengal government, and due to the state of the West Bengal economy coupled with the type of students Kailash serves, funds are scarce. Furthermore, the school takes in less money than it might due to Principal Mitra’s admirable decision to waive the 250 rupee ($5) annual admission fee because it would be too costly for many students.  The school is weathered from years of neglect. Key pieces of infrastructure are worn down or missing altogether.
+
+Kailash is lucky because it has all the things that money can’t buy—a strong principal, caring staff, and teachers that are exceptional. However, Kailash is in dire need of some infrastructural upgrades, and that is why I’m reaching out to you all for help.  I sat down with Principal Mitra and asked him to come up with a list of what he thought his school needed most.  The list was 17 items long, but he trimmed it to the most important items—a wish list that can be made a reality for just $5,000.  Below you can find the final list which includes creating a school library, upgrading the school’s bathrooms, and adding fans to classrooms.  We aren’t talking about adding Smart Boards or fancy language software. Instead, we’re talking about essential and long overdue infrastructure that the school badly needs and that will immediately improve the quality of students’ lives and education.
+
+
 					</i></small>
 				</p>
 				<img src="img/progressbar.png" align="center"/>
