person can be added to database now

--- a/app/Views/registration.html
+++ b/app/Views/registration.html
@@ -11,7 +11,7 @@
 		<tr>				
 			<td valign="top">
 				
-				<form id="registration" onsubmit="return (regValidate());">
+				<form action="../Controllers/registration_controller.php" id="registration" method="post" onsubmit="return (regValidate());">
 				<div>	
 					<fieldset >
 					<legend><b>Registration Information</b></legend>
