content added in charity page

--- a/app/Views/explore.html
+++ b/app/Views/explore.html
@@ -20,22 +20,23 @@
 			<td>
 				<table border="0" cellpadding="5" cellspacing="10">
 					<tr>
-						<td width="300" height="300">
+						<td width="300" >
 							<a href="fullpostexplore.html">
-								<img src="img/education1.jpg" align="center" width="300px" height="150"/>
+								<img src="img/crisishelp1.jpg" align="center" width="300px" height="150"/>
 							</a>
-								<p> By: Shuvitro Roy</p>
+								<p> By: Amy Watson </p>
 								<p>
 									<small><i>
-										 On the corner of a busy intersection in Kolkata sits Kailash Vidyamandir.Kailash is an all-boys primary school and a co-ed secondary school that serves 700 students.
+										One day in September 2015, I felt a lump in my left breast. 
+										I am not an alarmist, but I am also very educated and aware of what that could mean. 
 									</i></small>
 								</p>
 								<img src="img/progressbar.png" align="center"/>
-								<p align="bottom"><b>Raised:</b> $70 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $640 </p>
+								<p><b>Raised:</b> $116 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $800 </p>
 						</td>
 						
 						<td width="300" >
-							<a href="fullpostexplore2.html">
+							<a href="fullpostexplore.html">
 								<img src="img/crisishelp1.jpg" align="center" width="300px" height="150"/>
 							</a>
 								<p> By: Amy Watson </p>
