--- a/app/Views/fullpostexplore.html
+++ b/app/Views/fullpostexplore.html
@@ -1,12 +1,18 @@
 <body>
 
 	<table align="center" border="1" width="1000" height="550"  cellpadding="10" cellspacing="0" >
+	
 		
 		<tr>
 			<td height="30" align="center"><h2>EXPLORE</h2></td>
+			<td>
+			<div>
+			<image src = "img/crisishelp1.jpg" width = "200px" height = "200px" align = "right"/>
+			</div>
+			</td>
 		</tr>
 		<tr>
-			<td height="20">
+			<td height="20" colspan = "2">
 				
 				<a href="index.html">Home</a>&nbsp &nbsp &nbsp  
 				<a href="create.html">Create</a> &nbsp &nbsp &nbsp
@@ -16,37 +22,95 @@
 		</tr >	
 		
 		<tr>
-			<td valign="top">
-				<h2>Donate for Education institution</h2>
-				<p>By: Shuvitro Roy </p>
+			<td valign="top" colspan = "2">
+				<h2>Donate for cancer patient</h2>
+				<p>By: Amy Watson </p>
+				<div><B>$1116</B> of $8000 goal</div>
+				<div>Raised by 125 people in 10 days</div>
+				<image src = "img/progressbar.png"/>
+				<br>
+				<input type = "submit" value = "Donate Now">
 				<p>
 					<small><i>
-    On the corner of a busy intersection in Kolkata sits Kailash Vidyamandir.  Kailash is an all-boys primary school and a co-ed secondary school that serves 700 students.  It’s been on that same corner for 167 years offering an opportunity for the poorest students of Kolkata to receive an education. The school is led by Biswajit Mitra, a man with a golden heart and an unparalleled commitment to education. Despite all the challenges that come with his job, Principal Mitra is one of the most optimistic people I’ve ever met. He has something special to share about each student (“Akash is an amazing dancer,” “Babusona has lovely handwriting,” “Nandi is a strong football player”) as well as each alumnus who comes back to the school to pay their respects.  A few quick facts about Principal Mitra: He sometimes sleeps in his office to do morning exercises with the boys, he spends his weekends at education conferences, and is constantly trying to improve his school.  In his 16 years as headmaster, he righted a school that was sinking fast, hired exceptional teachers, created the first dorm at a public school in Kolkata, and built a tight-knit community.
+One day in September 2015, I felt a lump in my left breast. I am not an alarmist, but I am also very educated and aware of what that could mean. I had an appointment scheduled in a month with my OB/GYN, so at first, I thought I would wait and talk to my doctor about it then. I had a mammogram just six months prior, so I figured that it was nothing. But I did some online research and decided that to be safe, I should schedule something sooner.
 
-Supporting the principal is an incredible staff.  Many of them could be elsewhere.  As an example, the school’s head-warden, Sona Da, was a highly respected lawyer in Chetla (the neighborhood where Kailash is located).  He was retired, but at the Principal’s urging, he joined the school. He now puts in 12-hour days making sure the 100 students who live in the dorm are fed, dressed up to standard, and healthy.  Side note: he is also one of the flyest dressers of all time. The other staff at the school are excellent as well.  There’s our security guard, Subrata, who doubles as the carpenter and the “dorm mother,” Tanusree, who is mischievous and likes to play pranks.  No one is going through the motions at Kailash—they are working with a purpose.
-Then there are the teachers, most of whom have been at Kailash for years.  The school has teachers like Sharmila who spends her own money to take students on field trips and Dolly who gives out storybooks to the top preformers on her exams.  The teachers at Kailash deal with irregular student attendance, lack of teaching resources, and are faced with classrooms that have drastic discrepancy in student aptitude.  Teaching at Kailash is not easy, but the staff is ready to go six days a week.
+I have known my doctor for years, since she delivered my children. During my exam, she agreed that something wasn’t right and walked me directly over to the radiology department. I stayed for the results. The images were concerning, so it was recommended that I see a surgeon for a biopsy.
 
-Finally, there are the students of Kailash.  They are curious, intelligent, aspirational, and loving.  They are a tight-knit group—older students look out for the younger ones, they share everything, and while there are arguments, they’re only short-lived.  They’re great kids on their way to becoming great adults.
+Since I didn’t know any surgeons, I was referred to one. I saw the surgeon the very next day and got a needle guided biopsy. I was very glad that I was able to get everything done so quickly. 
+Then I had to wait a couple days for results. I continued to work, and my job was very understanding. A couple days later, while I was at work, I the doctor’s office called. The surgeon told me that “it was malignant.” He didn’t use the word cancer, so I asked him if it was cancer, and he said it was.
+	I felt my world spinning. I barely remember the rest of the phone call. My mind was going a mile a minute. I was shocked that it was cancer. We have no family history of cancer. The diagnosis hit me hard.
 
-All of this positivity and good vibes is against a stark backdrop.
+I went in the very next week to meet with the surgeon. He did an MRI on both of my breasts. At the appointment, he talked to me a little about next steps and a course of action. Then a few days later, the results came back that showed another lump in the left breast and one in the right. Days turned into weeks, as I had more MRIs and biopsies. This time was a blur as I went from one appointment to another and waited for results.
 
-Kailash’s students come from the most disadvantaged communities in Kolkata and the surrounding provinces.  They come almost exclusively from the 25% of families in West Bengal who live below the poverty line, subsisting on less than $1.90 a day. They are all first-generation learners, the first in their families to read and write.  15 students in the dorm are orphans, and many other students are missing a parent.  Some students face food insecurity, while others face housing insecurity, and some face both.  Some students have been physically abused others are pulled out of school to help harvest crops or to work to support their family, missing weeks of school at a time.  When some students walked into Kailash to start 5th grade it was their first time entering a school.  
+My husband and I met with an oncologist that the surgeon referred us to within his same practice. The oncologist was a general oncologist and saw patients with a wide range of cancer. The surgeon who completed my testing was a general surgeon and not a surgical oncologist. After meeting with both of them, I just felt like I wanted doctors who specialized in cancer and specifically breast cancer.I came to CTCA with my husband. We stayed at a hotel close by, and we used a shuttle service provided by the hospital. During that time, I met with my entire care team, including my medical oncologist and surgical oncologist. I had tests, blood work and scans, and by the end of the evaluation, I knew the results.
 
-Kailash is a government school.  All its funding comes from the West Bengal government, and due to the state of the West Bengal economy coupled with the type of students Kailash serves, funds are scarce. Furthermore, the school takes in less money than it might due to Principal Mitra’s admirable decision to waive the 250 rupee ($5) annual admission fee because it would be too costly for many students.  The school is weathered from years of neglect. Key pieces of infrastructure are worn down or missing altogether.
+I found out I had stage IIB breast cancer, and my medical oncologist told me I could take some time to decide if I wanted to pursue treatment at CTCA. “Let’s get started right away,” I told her. So I went home, made arrangements and came back the next week.
 
-Kailash is lucky because it has all the things that money can’t buy—a strong principal, caring staff, and teachers that are exceptional. However, Kailash is in dire need of some infrastructural upgrades, and that is why I’m reaching out to you all for help.  I sat down with Principal Mitra and asked him to come up with a list of what he thought his school needed most.  The list was 17 items long, but he trimmed it to the most important items—a wish list that can be made a reality for just $5,000.  Below you can find the final list which includes creating a school library, upgrading the school’s bathrooms, and adding fans to classrooms.  We aren’t talking about adding Smart Boards or fancy language software. Instead, we’re talking about essential and long overdue infrastructure that the school badly needs and that will immediately improve the quality of students’ lives and education.
-
-
-					</i></small>
-				</p>
-				<img src="img/progressbar.png" align="center"/>
-			 <p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
-				
-			</td>																																	
-		</tr>
+I had six rounds of chemotherapy. I went back and forth between home and the hospital. But now my family can't afford the expenses of my cancer treatment.All the money they had is finished.I don't know what should I do now.I need help from all of u for my treatment.Maybe this is my last chance for life.Please help 				
+		
+	<div>	Here are the milestones:</div>
+	<h4>	-Shuvitro Roy - $2700</h4>
+	<h4>	-Amy Watson - $1116 </h4>
+		<h4> -Chaka - $1200</h4>
+		<h4> -Debby Brousias - $6000</h4>
+		<h4>-Maxim Max - $2430</h4>
+		<h4>-Asley Stewart - $3500</h4>
+		<h4>-John Will - $5000</h4>
+		<h4>-Jackie Tanever - $1250</h4>
+		<h4>-Kylie - $5430</h4>
+		
+		<h2>Help spread the world!</h2>
+		
+		<div><b>Created December 15,2017 </b></div>
+		<image src = "img/crisishelp1.jpg" width = "60px" height = "60px" />
+		<b>Amy Watson</b>
+		<br>
+		organizer
+		<br/>
+		<div><h2>Recent Donations :</h2></div>
+		        <br>
+				<image src = "img/BA.jpg" width = "45px" height = "45px"/>
+			   <b>Brenda and Any Hansen                       <b>$50</b></b>
+			   <h5>22 minutes ago</h5>
+			   <br>
+			   <image src = "img/GM.jpg" width = "45px" height = "45px"/>
+			   <b>Gary Mechley                      <b>$80</b></b>
+			   <h5>2 days ago</h5>
+			   <br>
+			   <image src = "img/KA.jpg" width = "45px" height = "45px"/>
+			   <b>Kristen Aniston                     <b>$100</b></b>
+			   <h5>35 minutes ago</h5>
+			   <br>
+			   <image src = "img/HR.png" width = "45px" height = "45px"/>
+			   <b>Hanna Richard                <b>$60</b></b>
+			   <h5>7 hours ago</h5>
+			   <br>
+			   <image src = "img/CM.jpg" width = "45px" height = "45px"/>
+			   <b>Cindy and Mathew                <b>$60</b></b>
+			   <h5>5 hours ago</h5>
+			   <br>
+			   <image src = "img/PE.jpg" width = "60px" height = "60px"/>
+			   <b>Paul and Elesabeth               <b>$60</b></b>
+			   <h5>26 minutes ago</h5>
+			   <br>
+			   <image src = "img/MR.jpg" width = "45px" height = "45px"/>
+			   <b>Matt Resler              <b>$60</b></b>
+			   <h5>26 minutes ago</h5>
+			   <br>
+			   <image src = "img/Anonymous.png" width = "45px" height = "45px"/>
+			   <b>Anonymous               <b>$50</b></b>
+			   <h5>3 hours ago</h5>
+			   <br>
+			   <a href="seemore.html">+see more</a>
+			   <br>
+			   viewing 8 of 25 donations
+			   
+		
+		
+		
 		
 		<tr height="5">
-			<td  valign="top" colspan="2"><center>Copyright 2017</center></td>
+			<td  valign="top" colspan="3" ><center>Copyright 2017</center></td>
 		</tr>	
 	</table>
 </body>
