changes to createBlog page

--- a/app/Views/createBlog.html
+++ b/app/Views/createBlog.html
@@ -21,7 +21,10 @@
 			<td valign="top" width="700">
 				
 				<h3>Write Blog</h3>
-				
+				Title
+				<br/> <br/>
+				<input name="blogtitle"/> <br/> <br/>
+				Blog
 				<textarea rows="15" cols="105">
 					
 				</textarea>
