progress bar of explore page created

--- a/app/Views/explore.html
+++ b/app/Views/explore.html
@@ -33,7 +33,23 @@
 										Your donations WILL empower youth
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								
+								<div class="container" id=1>
+								  <div class="skills html" id=2>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("1").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("2").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p align="bottom"><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 						
@@ -48,7 +64,22 @@
 										Within 24 hours, the doctors suspected I had lung cancer
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id=5>
+								  <div class="skills html" id=6>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("5").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("6").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 						
@@ -65,7 +96,22 @@
 										Your donations WILL empower youth
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id=7>
+								  <div class="skills html" id=8>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("7").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("8").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 					</tr>
@@ -84,7 +130,22 @@
 										Your donations WILL empower youth
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id=9>
+								  <div class="skills html" id=10>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("9").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("10").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p align="bottom"><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 						
@@ -99,7 +160,22 @@
 										Within 24 hours, the doctors suspected I had lung cancer
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id=11>
+								  <div class="skills html" id=12>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("11").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("12").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 						
@@ -116,7 +192,22 @@
 										Your donations WILL empower youth
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id=13>
+								  <div class="skills html" id=14>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("13").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("14").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 					</tr>
@@ -135,7 +226,22 @@
 										Your donations WILL empower youth
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id="15">
+								  <div class="skills html" id="16">Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("15").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("16").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p align="bottom"><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 						
@@ -150,7 +256,22 @@
 										Within 24 hours, the doctors suspected I had lung cancer
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id=17>
+								  <div class="skills html" id=18>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("17").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("18").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 						
@@ -167,7 +288,22 @@
 										Your donations WILL empower youth
 									</i></small>
 								</p>
-								<img src="img/progressbar.png" align="center"/>
+								<div class="container" id=3>
+								  <div class="skills html" id=4>Raised</div>
+								</div>
+
+
+								<script>
+									s=document.getElementById("3").style;
+									s.backgroundColor="#ddd";
+									s.fontSize="18px";
+									
+									
+									j= document.getElementById("4").style;
+									j.backgroundColor="#2196F3";
+									j.width="90%";
+									
+								</script>
 								<p><b>Raised:</b> $143 &nbsp &nbsp &nbsp &nbsp &nbsp <b>Goal:</b> $1000 </p>
 						</td>
 					</tr>
