campaigns content added

--- a/app/Views/userhistory.html
+++ b/app/Views/userhistory.html
@@ -9,21 +9,31 @@
 		
 	 </tr>
 	 <tr>
-		  <td> <U>Transaction ID : <input type = "text" name = "ID"></U>
+		  <td> <U>Transaction ID : 
+		       <input type = "text" name = "ID"></U>
 		       <br>
+			   <br>
 		       <input type = "submit" value = "submit">
 		   </td>
 		   <td>
 			   <U>Transaction Date : <input type = "text" name = "Date"></U>
 			   <br>
+			   <br>
 			   <input type = "submit" value = "submit">
 		    </td>
 			 <td><U>Amount : <input type = "text" name = "Amount"></U>
 			      <br>
+				  <br>
 			     <input type = "submit" value = "submit">
 			     </td>
 			  <td>
-			   <U>Transaction Type : <input type = "text" name = "Type"></U>
+			   <U>Transaction Type  :
+			      <select class = "" name = "transaction">
+			      <option value = "" >One-Time Donation</option>
+				  <option value = "" >Recurring Donation</option>
+				  </select>
+			   </U>
+			   <br>
 			      <br>
 			     <input type = "submit" value = "submit">
 			   </td>
