login, logout done

--- a/app/Views/campaign-charity.html
+++ b/app/Views/campaign-charity.html
@@ -1,6 +1,4 @@
 
-
-
 <body>
 	
 	<table align="center" border="1" width="1000" height="550"  cellpadding="10" cellspacing="0" >
@@ -35,7 +33,7 @@
 					This page is to create new fund rising event for charity
 				</h1>
 
-				<form action="campaignCharityImg.html">
+				<form action="campaignCharityImg.php">
 					<fieldset width="400">
 					<table align="left">
 						<colgroup span="2">
@@ -51,6 +49,13 @@
 						<tr>			
 							<td>
 								<br/>Description: <br/><textarea type="text" cols="70" rows="15" name="title"></textarea>
+							</td>
+						</tr>
+						
+						<tr>
+							<td>
+								<br/><br/>
+								Set goal amount of money ($) : <input  type="text" name="goalMoney" />
 							</td>
 						</tr>
 						
