--- a/app/Views/login.html
+++ b/app/Views/login.html
@@ -13,7 +13,7 @@
 				
 			<td align="center">
 				
-				<form action="userprofile.html">
+				<form action="../Controllers/login_controller.php" method="post">
 				
 				<h4>SIGN IN</h4>
 				
@@ -22,8 +22,8 @@
 					
 					 <div align="left">
 					
-						User Name <br/>  <input name="username"/> <br/> <br/>
-						Password <br/>  <input name="password"/><br/> <br/>
+						User Name <br/>  <input type="text" name="username"/> <br/> <br/>
+						Password <br/>  <input type="password" name="password"/><br/> <br/>
 						<hr/>
 						<input type="submit" value="SIGN IN" />
 											
