create a blog post

--- a/app/Views/blogPersonal.html
+++ b/app/Views/blogPersonal.html
@@ -35,7 +35,7 @@
 					So, in an effort to fix the acquisition and retention problem,					
 					the sector is looking for new/better ways to profile and segment prospects.					
 				</i>
-				<a href="blogDetails.html">Read more</a>
+				<a href="blogEdit.html">Edit</a>
 				</p>
 				
 				<h3>Dutch Cancer Society recruits 50,000 donors via telethon</h3>
