--- a/app/Views/blogEdit.html
+++ b/app/Views/blogEdit.html
@@ -23,14 +23,14 @@
 					<h3>Edit Blog</h3>
 					Title
 					<br/> <br/>
-					<input name="blogtitle"/ value="asdad"> <br/> <br/>
+					<input name="blogtitle"/ value=""> <br/> <br/>
 					Blog
-					<textarea name="textarea" rows="15" cols="105">
+					<textarea name="textarea" rows="15" cols="105" value="">
 						
 					</textarea>
 					<hr/>
 					
-					<input type="submit" value="Update">
+					<input type="submit" value="Update" >
 				</form>
 			</td>
 			
